# rvemu

./: Cargo.toml  README.md
src/: main.rs  tests.rs
src/cpu/: instruction.rs  mod.rs
src/emulator/: cpu.rs  mod.rs
tests/: add  add.dump  addi  addi.dump  and  and.dump  andi.dump  auipc  auipc.dump  beq.dump  bge.dump  bgeu.dump  blt.dump  bltu.dump  bne  bne.dump  fence_i.dump  jal.dump  jalr.dump  lb  lb.dump  lbu  lbu.dump  lh  lh.dump  lhu.dump  lui  lui.dump  lw.dump  or.dump  ori.dump  rv32mi-p-breakpoint  rv32mi-p-csr  rv32mi-p-illegal  rv32mi-p-ma_addr  rv32mi-p-ma_fetch  rv32mi-p-mcsr  rv32mi-p-sbreak  rv32mi-p-scall  rv32mi-p-shamt  (+403 more)
