[package]
name = "riscv-emulator"
version = "1.0.0"
edition = "2021"
author = "Apostolos Kiraleos"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf_rs = "0.2.0"
clap = {version="3.1.5", features=["derive"]}

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false 